# ad-peps

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
adpeps/: __init__.py  __main__.py  _version.py  types.py
adpeps/ipeps/: __init__.py  config.py  contractions.yaml  ctm.py  evaluation.py  ipeps.py  make_momentum_path.py
adpeps/ipeps/models/: __init__.py  common.py  heisenberg.py
adpeps/simulation/: __init__.py  run_ipeps_exci.py  run_ipeps_gs.py
adpeps/tensor/: config.py  contractions.py  ncon.py  ops.py
adpeps/utils/: __init__.py  ctmtensors.py  empty_tensor.py  io.py  nested.py  printing.py  tlist.py
docs/: .buildinfo  index.html  ipeps.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/extra/: adpeps.ipeps.ipeps.rst.txt
docs/_sources/notes/: install.rst.txt  start.rst.txt
docs/extra/: adpeps.ipeps.ctm.html  ipeps.ipeps.html
docs/notes/: example2.html  install.html
docs/source/: Makefile  conf.py  example.ipynb  index.rst  ipeps.rst  tmpmod.rst_bak
docs/source/_templates/: sidebar-nav-bs.html
docs/source/notes/: example.rst
examples/: heis_D2.yaml  heis_D2_exci.yaml
simulations/exci/: heisenberg_D2_X40.base.npz  heisenberg_D2_X41.base.npz
simulations/exci/heisenberg_D2_X40/: 0_0.5_0.5.npz  10_1.0_1.0.npz  11_0.875_0.875.npz  12_0.75_0.75.npz  13_0.625_0.625.npz  15_0.375_0.375.npz  16_0.25_0.25.npz  17_0.125_0.125.npz  18_0.0_0.0.npz  (+21 more)
simulations/gs/: 2_heisenberg_D2_X40.npz  heisenberg_D2_X40.npz  heisenberg_D2_X41.npz
tests/: test_utils.py
(+37 files in other folders)
